tests/ui/rfcs/impl-trait/higher-ranked-regions-diag.stderr
error[E0700]: hidden type for `impl Sized` captures lifetime that does not appear in bounds
  --> $DIR/higher-ranked-regions-diag.rs:19:5
   |
LL | fn bar() -> impl for<'a> Trait<&'a (), Assoc = impl Sized> {
   |                      --                        ---------- opaque type defined here
   |                      |
   |                      hidden type `<impl for<'a> Trait<&'a ()> as Trait<&'a ()>>::Assoc` captures the lifetime `'a` as defined here
LL |     foo()
   |     ^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0700`.
